cmake_minimum_required(VERSION 3.14)
project(Hackerrank_Problems)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Hackerrank_Problems main.cpp Sock_Merchant.c Sock_Merchant.cpp Sock_Merchant.h)
add_executable(Sock_Merchant Sock_Merchant.cc)
add_executable(CountingValleys Counting_Valleys.cpp)
add_executable(Jump_Cloud Jump_Cloud.c)
add_executable(main main.cpp)
add_executable(Map Map.cpp)
#add_executable(test_string test_string.cpp)
add_executable(Repeated_String Repeated_String.c)
add_executable(VLA VLA.cc)
add_executable(Day15 Day15.cpp)
add_executable(Day18 Day18.cc)
add_executable(AttributeParser AttributeParser.cc)
add_executable(Class_Template_Alternative Class_Template.cc)
add_executable(Class_Template Class_Template_Their_Solution.cc)
add_executable(Accessing_Inherited_Functions Accessing_Inherited_Functions.cc)
add_executable(Box_It Box_It.cc)
add_executable(Classes_and_Objects Classes_and_Objects.cc)
add_executable(Inherited_Code Inherited_Code.cc)
add_executable(Sorting_String_Arrays Sorting_String_Arrays.c)
add_executable(Test_Sorting Test_Sorting.c)
add_executable(Student_Marks_Sum C/Students_Marks_Sum.c)
add_executable(Print_Tokens C/Print_Tokens.c)